# Run

./: CHANGELOG.md  Cargo.toml  DEPENDENTS.md  README.md  build.rs
.github/: Update.md
Source/Fn/Binary/: Command.rs
Source/Fn/Binary/Command/: Parallel.rs  Sequential.rs
