[[bin]]
name = "PRun"
path = "Source/Library.rs"

[[bin]]
name = "Run"
path = "Source/Library.rs"

[[bin]]
name = "Inn"
path = "Source/Library.rs"

[[bin]]
name = "InnKeeper"
path = "Source/Library.rs"

[dependencies]
clap = { features = ["derive"], version = "4.5.27" }
walkdir = { version = "2.5.0" }
futures = { version = "0.3.31" }
rayon = { version = "1.10.0" }
tokio = { version = "1.43.0", features = ["full"] }
once_cell = { version = "1.20.2" }
num_cpus = { version = "1.16.0" }
crossbeam-queue = "0.3.12"
unbug = { version = "0.4.0" }

[build-dependencies]
serde = { version = "1.0.217", features = ["derive"] }
toml = { version = "0.8.19" }

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "Library"
path = "Source/Library.rs"

[package]
autobenches = false
autobins = false
autoexamples = false
autotests = false
default-run = "Run"
description = "Run 🍺"
license-file = "LICENSE"
name = "prun"
repository = "https://github.com/PlayForm/Run.git"
version = "0.1.3"
edition = "2021"
include = [
	"Source/**/*",
	"LICENSE",
	"README.md",
	"CHANGELOG.md",
	"build.rs",
	"Cargo.toml",
]

[features]
default = []
